--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Brian Zhang / My Personal Page"
 title_separator          : "-"
 name                     : &name "Brian Zhang"
 description              : &description "High School Student attending William Henry Harrison High School"
-url                      : https://niothefirst.github.io/Brian-Zhang-.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://niothefirst.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "niothefirst.github.io/Brian-Zhang-.github.io"
+repository               : "niothefirst.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
