--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Brian Zhang"
-  avatar           : "http://NioTheFirst.github.io/Profilepic.jpg"
+  avatar           : "http://NioTheFirst.github.io/Profilepic.png"
   bio              : "High School Student from William Henry Harrison High School"
   location         : "Indiana, USA"
   employer         :
